# clump_tracker

./: .pre-commit-config.yaml  Cargo.toml  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: lib.rs
src/clump_tracker/: __init__.py  clumps.py  finder.py
src/clump_tracker_rust/: __init__.py
tests/: test_basics.py  test_cc.py  test_clump.py  test_finder.py
