[project]
name = "clump-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "vdbma" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.25.0"
]

[project.scripts]
clump-tracker = "clump_tracker:main"

[tool.maturin]
module-name = "clump_tracker._core"
python-packages = ["clump_tracker"]
python-source = "src"

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "src/**/*.rs" }, { file = "Cargo.toml" }, { file = "Cargo.lock" }]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[dependency-groups]
test = [
    "pytest>=9.0.1",
]

[tool.pytest]
strict = true
filterwarnings = ["error"]
