[project]
name = "clump-tracker"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "vdbma" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.21.2"
]

[tool.maturin]
module-name = "clump_tracker._core"
python-packages = ["clump_tracker"]
python-source = "src"

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "src/**/*.rs" }, { file = "Cargo.toml" }, { file = "Cargo.lock" }]
no-build-package = [
    "numpy",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[dependency-groups]
test = [
    "pytest>=9.0.1",
]
covcheck = [
    {include-group = "test"},
    "coverage>=7.10.0",
]

[tool.pytest]
strict = true
filterwarnings = ["error"]

[tool.ruff.lint]
select = [
    "E", # flake8
    "W", # flake8
    "B", # flake8-bugbear
    "I", # isort
    "UP", # pyupgrade
]

[tool.coverage.run]
branch = true
source = [
    "src/clump_tracker",
    "tests",
    "src"
]

[tool.coverage.report]
show_missing = true
skip_covered = false

# use exclude_also to *extend* the default exclude_lines,
# and allow purely defensive code patterns
exclude_also = [
    "^\\s*raise (NotImplemented|Assertion)Error\\b",
    "^\\s*case _ as _?unreachable:",
]
